--- a/index.html
+++ b/index.html
@@ -4,26 +4,33 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
     <title>Buy PC</title>
   </head>
   <body>
     <header>
-      <h1>Buy PC</h1>
-      <h2>Compra componentes de PC</h2>
-      <div>
-        <div class="iconoCarro">
-          <span><i class="fas fa-shopping-cart"></i></span>
-          <div class="contenidoCarro">
-            <div class="cardContenido">
-              <h3>Tarjeta Grafica</h3>
-              <img src="img/tarjetaGrafica.jpg" alt="" />
-              <span>$15000.00</span>
-              <span><i class="fas fa-cart-arrow-down"></i></span>
-            </div>
-            <button class="btnVacearCarrito">Vaciar Carrito</button>
+      <div class="titulos">
+        <h1>Buy PC</h1>
+        <h2>Compra componentes de PC</h2>
+      </div>
+      <div class="iconoCarro">
+        <span><i class="fas fa-shopping-cart"></i></span>
+        <div class="contenidoCarro">
+          <div class="cardContenido">
+            <h3>Tarjeta Grafica</h3>
+            <img src="img/tarjetaGrafica.jpg" alt="" />
+            <span>$15000.00</span>
+            <span><i class="fas fa-cart-arrow-down"></i></span>
           </div>
+          <button class="btnVacearCarrito">Vaciar Carrito</button>
         </div>
       </div>
+      
     </header>
     <section class="contenedorPiezas">
       <div class="card">
@@ -205,7 +212,10 @@
       </div>
     </section>
     <footer>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi accusantium reprehenderit quae in error perferendis?</p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi
+        accusantium reprehenderit quae in error perferendis?
+      </p>
     </footer>
   </body>
 </html>
